# rust-discord-bot

./: .env  .env.default  .env.example  .envrc  Cargo.toml  Secrets.toml
src/: gemini.rs  main.rs
src/ai/: error.rs  gemini.rs  mod.rs  provider.rs
src/commands/: answer.rs  health.rs  mod.rs  play_music.rs  youtube.rs
src/search/: error.rs  mod.rs  youtube.rs
src/youtube/: mod.rs
