[package]
name = "rust-discord-bot"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serenity = {version = "0.12", features = ["cache", "framework", "standard_framework", "rustls_backend"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
regex = "1.10"
urlencoding = "2.1"

[dependencies.tokio]
version = "1"
features = ["macros", "signal", "rt-multi-thread"]

